log
Thu 11 May 2023 04:25:14 AM UTC: 
 tests:  0|4
total_score: 0/70
f744385
Thu 11 May 2023 02:14:48 PM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:16: error: expected ‘;’ before ‘malloc’
   37 |   heap = (heap) malloc(sizeof(heap));
      |                ^~~~~~~
      |                ;
heap.c:38:32: error: expected expression before ‘=’ token
   38 |   heap.heapArray = (heapElem*) = malloc (3 * sizeof(heapElemen));
      |                                ^
Compilation failed
fb70e69
Thu 11 May 2023 02:15:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:16: error: expected ‘;’ before ‘malloc’
   37 |   heap = (heap) malloc(sizeof(heap));
      |                ^~~~~~~
      |                ;
heap.c:38:51: error: ‘heapElemen’ undeclared (first use in this function); did you mean ‘heapElem’?
   38 |   heap.heapArray = (heapElem*) malloc (3 * sizeof(heapElemen));
      |                                                   ^~~~~~~~~~
      |                                                   heapElem
heap.c:38:51: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3641352
Thu 11 May 2023 02:15:11 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:16: error: expected ‘;’ before ‘malloc’
   37 |   heap = (heap) malloc(sizeof(heap));
      |                ^~~~~~~
      |                ;
Compilation failed
1b5fd29
Thu 11 May 2023 02:15:34 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:16: error: expected expression before ‘)’ token
   37 |   heap = (heap*) malloc(sizeof(heap));
      |                ^
Compilation failed
b81cdd0
Thu 11 May 2023 02:17:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:17: error: expected expression before ‘)’ token
   37 |   heap = (heap *) malloc(sizeof(heap));
      |                 ^
heap.c:42:11: error: incompatible types when returning type ‘Heap’ {aka ‘struct Heap’} but ‘Heap *’ {aka ‘struct Heap *’} was expected
   42 |    return heap;
      |           ^~~~
heap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d4c3340
Thu 11 May 2023 02:17:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:10: error: incompatible types when assigning to type ‘Heap’ {aka ‘struct Heap’} from type ‘void *’
   37 |   heap = malloc(sizeof(heap));
      |          ^~~~~~
heap.c:42:11: error: incompatible types when returning type ‘Heap’ {aka ‘struct Heap’} but ‘Heap *’ {aka ‘struct Heap *’} was expected
   42 |    return heap;
      |           ^~~~
heap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fa24515
Thu 11 May 2023 02:17:30 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:7: error: ‘heap’ is a pointer; did you mean to use ‘->’?
   38 |   heap.heapArray = (heapElem*) malloc (3 * sizeof(heapElem));
      |       ^
      |       ->
heap.c:39:7: error: ‘heap’ is a pointer; did you mean to use ‘->’?
   39 |   heap.size = 0;
      |       ^
      |       ->
heap.c:40:7: error: ‘heap’ is a pointer; did you mean to use ‘->’?
   40 |   heap.capac = 0;
      |       ^
      |       ->
Compilation failed
36c12af
Thu 11 May 2023 02:17:51 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:7: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   38 |   heap->heapArray = (heapElem*) malloc (3 * sizeof(heapElem));
      |       ^~
heap.c:37:10: note: referencing an object of size 8 allocated by ‘malloc’
   37 |   heap = malloc(sizeof(heap));
      |          ^~~~~~~~~~~~~~~~~~~~
heap.c:39:7: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   39 |   heap->size = 0;
      |       ^~
heap.c:37:10: note: referencing an object of size 8 allocated by ‘malloc’
   37 |   heap = malloc(sizeof(heap));
      |          ^~~~~~~~~~~~~~~~~~~~
heap.c:40:7: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   40 |   heap->capac = 0;
      |       ^~
heap.c:37:10: note: referencing an object of size 8 allocated by ‘malloc’
   37 |   heap = malloc(sizeof(heap));
      |          ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8c419be
Thu 11 May 2023 02:18:24 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
test.c: In function ‘createHeap’:
heap.c:39:14: error: ‘heap’ is used uninitialized [-Werror=uninitialized]
   39 |   heap->size = 0;
      |   ~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
6f1fdde
